--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     wearApp project(':wear')
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'org.jsoup:jsoup:1.7.2'
+    compile 'com.android.support:appcompat-v7:+'
 }
