--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <uses-permission android:name="android.permission.BODY_SENSORS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -51,6 +51,9 @@
         <activity
             android:name="com.insight.insight.ui.Notifications_Actv"
             android:label="@string/title_activity_wnotifications" />
+        <activity
+            android:name="com.insight.insight.ui.Temp_Actv"
+            android:label="@string/title_activity_wtempdebugger" />
 
         <service
             android:name="com.insight.insight.sensors.BatterySensor"
