--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -27,12 +27,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity
-            android:name="com.insight.insight.ui.OldMainActivity"
-            android:label="@string/app_name" >
-
-        </activity>
-        <activity android:name="com.insight.insight.ui.layouts.HomeActivity_Actv">
+        <activity android:name=".ui.HomeActivity_Actv">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
