UI - AmbientLight virtualization modified to Line Chart

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -95,7 +95,7 @@
             android:process=":remote" />
 
         <!-- Broadcast receiver for BOOT_COMPLETED event -->
-        <receiver android:name=".utils.ServicesMonitor" android:enabled="true" android:exported="false">
+        <receiver android:name=".alarm.ServicesMonitor" android:enabled="true" android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
